# the_gold_monkey

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  MCP_SERVER_TESTING_SUMMARY.md  README.md  audio_cleanup.html  docker-compose.yml  main.py  main_backup.py  pyproject.toml
audio/: patchy_the_pirate.aup3-shm  patchy_the_pirate.aup3-wal
data/: agent_memory.json
docs/: DOCKER_SETUP.md  MCP_ANALYTICS_INTEGRATION.md  MCP_SERVER_TESTING_SUMMARY.md  PAUSE_OPTIMIZATION.md  README.md  ROUTINE_STORAGE.md  TPLINK_CACHING_SYSTEM.md  VOICE_SERVER.md
images/: the_gold_monkey_title.ai
mcp_servers/: __init__.py  rag_client.py  rag_server.py  roku_client.py  roku_server.py  saltybot_client.py  saltybot_server.py  spotify_client.py  spotify_server.py  tplink_client.py  tplink_direct.py  tplink_server.py  unified_client.py  unified_server.py  voice_client.py  voice_server.py
pages/: about.py  automation.py  chat_with_salty.py  mcp_manager.py  metrics.py  prompt_analysis.py  tiki_bar_games.py
rag/: Guests.md  the_gold_monkey_backstory.md  the_gold_monkey_trivia.md
src/: __init__.py
tests/: test_agentic_architecture.py  test_mcp_cli.py  test_mcp_direct.py  test_mcp_error_handling.py  test_mcp_servers.py  test_persistent_routines.py  test_roku_connection.py  test_roku_status.py  test_spotify_status.py  test_stdio.py  test_tplink_cache.py  test_tts_selector.py  test_voice_server.py
utils/: actions.py  activity_logger.py  agent.py  agentic_analytics.py  analytics_games.py  audio_visualizer.py  create_ambient_sounds.py  create_simple_audio.py  debug_roku.py  dynamic_tool_discovery.py  env_utils.py  find_roku.py  load_sample_routines.py  mcp_analytics.py  mcp_error_handler.py  migrate_routine_storage.py  mute_audio.py  restart_servers.py  routine_storage.py  shared.py  start_servers.py  stop_audio.py  stop_servers.py  streamlit_async.py  test_enhanced_voice.py  test_gtts.py  test_mcp_analytics_integration.py  test_mcp_servers.py  test_optimized_pauses.py  test_routine_storage.py  test_streamlit_roku.py  test_tts_selector.py  tool_registry.py  (+2 more)
(+41 files in other folders)
