[project]
name = "salty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "python-kasa>=0.5.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "psutil>=5.8.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5.0",
    "markdown>=3.5.0",
    "plotly>=5.0.0",
    "mcp[cli]>=1.9.4",
]
